# MeinRepo

./: Formel berechnung1.2.py  Quiz.py
python/: Formel berechnung1.2.py  Quiz.py
python/Formelberechner/: .anjuta_sym_db.db  configure.ac
python/Formelberechner/.anjuta/session/: anjuta.session  dock-layout.xml
python/Formelberechner/src/: pygtk_foobar.py  pygtk_foobar.py~  pygtk_foobar.ui
python/Formelberechner1.1/: .anjuta_sym_db.db
python/Formelberechner1.1/.anjuta/session/: dock-layout.xml
python/Formelberechner1.1/src/: Makefile.am  pygtk_foobar.py  pygtk_foobar.py~  pygtk_foobar.ui
